.provarCaches/00D6C0000000xA6UAI/objects/Open_Order_Processing__c.object
<CustomObject>
    <fields>
        <fullName>CC_Order__c</fullName>
        <label>CC Order</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_InvoiceCredit__c</fullName>
        <label>CFS Invoice/Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Account__c</fullName>
        <label>SFDC Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Open Order Processing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Account__c</columns>
        <columns>CFS_InvoiceCredit__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Invoiced_Records</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Account__c</columns>
        <columns>CFS_InvoiceCredit__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </filters>
        <label>Invoiced Records</label>
    </listViews>
    <listViews>
        <fullName>Updated</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Account__c</columns>
        <columns>CFS_InvoiceCredit__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Updated</value>
        </filters>
        <label>Updated</label>
    </listViews>
    <nameField>
        <displayFormat>OOP-{0000000000}</displayFormat>
        <label>Open Order Processing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open_Order_Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>